tests/static/pass/internal/4.0.c
int x;

int main(void) {
      extern int x;
      extern int x; // Ok.
}

