tests/static/fail/tent-def/2.2.c
// 6.9.2p3
static int x[];
extern int x[];

int main(void) {
      return x[0];
}
